--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -29,7 +29,7 @@ body {
 	color: #1994cc;
 	order: 0;
 	margin-top: 30px;
-	margin-left: 26%;
+	margin-left: 18%;
 	/*align-self: 50%;*/
 	/*flex-basis: 60%;*/
 	flex-flow: 1;
@@ -66,7 +66,21 @@ body {
     color: #0a7eb3;
 	font-size: 12px;
     position: relative;
-	right: 80px;
+	left:200px;
+}
+.forgetPass1 {
+	text-decoration: none;
+	color: #0a7eb3;
+	font-size: 12px;
+	position: relative;
+	left:180px;
+}
+.forgetPass2 {
+	text-decoration: none;
+	color: #0a7eb3;
+	font-size: 12px;
+	position: relative;
+	left:210px;
 }
 #errorInfo{
 	color:red;
